--- a/src/index.html
+++ b/src/index.html
@@ -546,6 +546,28 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4102908933687!2d37.64427257738831!3d55.76874567309014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a6367b51bd7%3A0x3b7e3a741913ef24!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsINC0LjPRgTEsINCc0L7RgdC60LLQsCwg0KDQvtGB0YHQuNGPLCAxMDcwNzg!5e0!3m2!1sru!2sam!4v1743133266240!5m2!1sru!2sam"
+            width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <!-- <iframe
+            src="https://yandex.ru/map-widget/v1/?um=constructor%3A183f16d390eb0f49ab5d2752444cbbfc373b01d5bffb9fc4778a7b310bdcbb35&amp;source=constructor"
+            width="100%" height="630" frameborder="0"></iframe> -->
+
+        <!-- <div class="footer__map"></div> -->
+        <div class="footer__info">
+            <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+            <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/social/facebook.svg" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/social/instagram.svg" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/social/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
