--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
             </div>
             <form id="consultation-form" class='fead-form' action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="tel">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
 
                 <button class="btn btn_submit">заказать кОНСУЛЬТАЦИЮ</button>
@@ -569,7 +569,7 @@
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class='fead-form fead-form_mt25' action="#">
                 <input name="name" placeholder="Ваше имя" type="text">
-                <input name="phone" placeholder="Ваш телефон" type="tel">
+                <input name="phone" placeholder="Ваш телефон">
                 <input name="email" placeholder="Ваш E-mail" type="email">
 
                 <button class="btn btn_submit">заказать кОНСУЛЬТАЦИЮ</button>
@@ -582,7 +582,7 @@
             <div class="modal__descr">Пульсометр Polar FT1</div>
             <form class='fead-form fead-form_mt25' action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="tel">
+                <input required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
 
                 <button class="btn btn_submit">купить</button>
@@ -600,5 +600,6 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
